# ChangeLog for xfce-base/libxfce4ui
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/xfce-base/libxfce4ui/ChangeLog,v 1.14 2010/11/16 15:55:17 darkside Exp $

  16 Nov 2010; Jeremy Olexa <darkside@gentoo.org> libxfce4ui-4.7.4.ebuild:
  align keywords with Gentoo Prefix

  06 Nov 2010; Samuli Suominen <ssuominen@gentoo.org>
  libxfce4ui-4.7.4.ebuild:
  Block <libxfcegui4-4.7.0 to avoid conflict with function
  xfce_shortcuts_provider_set_shortcut in xfce4-settings and xfwm4.

*libxfce4ui-4.7.4 (03 Nov 2010)

  03 Nov 2010; Samuli Suominen <ssuominen@gentoo.org>
  +libxfce4ui-4.7.4.ebuild:
  Version bump.

*libxfce4ui-4.7.3 (05 Sep 2010)

  05 Sep 2010; Samuli Suominen <ssuominen@gentoo.org>
  +libxfce4ui-4.7.3.ebuild:
  Version bump.

*libxfce4ui-4.7.2 (19 Apr 2010)

  19 Apr 2010; Jeremy Olexa <darkside@gentoo.org> +libxfce4ui-4.7.2.ebuild:
  Version bump, bug fix release.
  http://releases.xfce.org/feeds/project/libxfce4ui

  31 Mar 2010; Samuli Suominen <ssuominen@gentoo.org>
  libxfce4ui-4.7.1.ebuild:
  Fix HTML documentation directory.

*libxfce4ui-4.7.1 (20 Dec 2009)

  20 Dec 2009; Jeremy Olexa <darkside@gentoo.org> +libxfce4ui-4.7.1.ebuild:
  Version bump, misc fixes leading to 4.8

  10 Nov 2009; Joseph Jezak <josejx@gentoo.org> libxfce4ui-4.7.0.ebuild:
  Marked ~ppc64 for bug #289983.

  02 Nov 2009; Raúl Porcel <armin76@gentoo.org> libxfce4ui-4.7.0.ebuild:
  Add ~alpha/~arm/~ia64/~sh/~sparc wrt #289983

  28 Oct 2009; Christian Faulhammer <fauli@gentoo.org>
  libxfce4ui-4.7.0.ebuild:
  added ~x86, bug 289983

  27 Oct 2009; Alexis Ballier <aballier@gentoo.org> libxfce4ui-4.7.0.ebuild:
  keyword ~x86-fbsd, bug #289983

  26 Oct 2009; Mounir Lamouri <volkmar@gentoo.org> libxfce4ui-4.7.0.ebuild:
  Keywording for ppc, bug 289983

  23 Oct 2009; Jeroen Roovers <jer@gentoo.org> libxfce4ui-4.7.0.ebuild:
  Marked ~hppa (bug #289983).

*libxfce4ui-4.7.0 (21 Oct 2009)
