@@ -1,4 +1,6 @@
 DIST libxfce4ui-4.7.4.tar.bz2 441695 RMD160 866c5d51bbf9edce7df35baa30f02610d5cb76e4 SHA1 16007edb132a0a6a6ed17d6e7a65b734f97399ed SHA256 fa2d9fb9c86166027a23f699167a234b59729311c46bd377947dbc309bf5ea0c
+DIST libxfce4ui-4.7.5.tar.bz2 442038 RMD160 1b90d8c218d207356b5526d98d2a6d36ae23c0e8 SHA1 ed67604ac5eaf9615af2cf98dc9c01508617858c SHA256 e001e52220d62133c243a9d092ad13c10a568549b88bb6652dc36d548edd4694
 EBUILD libxfce4ui-4.7.4.ebuild 1258 RMD160 7dfc5a43963a276dbf6644dace57908986bdd2cf SHA1 d970e915c88dacda658793d76cde8b8bf21e11c6 SHA256 53d28c100e44373a954891f7bb6f0cbfaaa1be7dae4e9c6ed12897a49715dd3d
-MISC ChangeLog 2111 RMD160 ec76703cfd4ad9ff41b13df634b5d56d44dcdd9b SHA1 3444bf393150dcad5580bb3ee1735424a24cc916 SHA256 260cf758ae890adee68cedc95b6815e575867b18d3331eda07e1bcce922594cf
+EBUILD libxfce4ui-4.7.5.ebuild 1259 RMD160 b2f75b7472a4dabee5a00924433898e369e2e36d SHA1 39816a31e41d137cb86bc4bac704bf67a4753681 SHA256 8ff252237329f57e07c99c4dadacac08894f8a7dec475bb9ecebcec2fcf39b3c
+MISC ChangeLog 2242 RMD160 1450cac4f5f327e423a81a2bc562853cdc5bc5fd SHA1 a632c06a47659c04df8a558d7c0f994f13e8c5fd SHA256 870a49a7ea9267cd9f8982e971ccff029606e706ad6710da9ed62e524512450d
 MISC metadata.xml 260 RMD160 e4efc39d9ffa2691501d30ea9de716acd332f9d6 SHA1 4bbbd9481ced7a04fd9470c0627dfff9be9d8a31 SHA256 96c5725a10ebc95fd3cfc84a2566152354229350a27d79a42648ca2b051fd028
